[workspace]
resolver = "2"
members = [
    "ps",
    "crates/ps-abstract",
    "crates/ps-acoustic",
    "crates/ps-common",
    "crates/ps-electro",
    "crates/ps-fluid",
    "crates/ps-fuse",
    "crates/ps-mechanical",
    "crates/ps-optical",
    "crates/ps-radiative",
    "crates/ps-spacial",
    "crates/ps-tactile",
    "crates/ps-temporal",
    "crates/ps-thermal",
    "crates/ps-vision",
]


[workspace.package]
version = "0.1.0"
authors = ["Lalo Blanc <lalo@engilore.com>"]
edition = "2021"
homepage = "https://www.engilore.com/"
license = "Apache-2.0"
repository = "https://github.com/engilore/pulsar-stellar"


[workspace.dependencies]
tokio = "1.42.0"
serde = { version = "1.0.215", features = ["derive"] }
