[workspace]
resolver = "2"
members = [
    "ps",
    "crates/ps-abstract",
    "crates/ps-acoustic",
    "crates/ps-common",
    "crates/ps-contextual",
    "crates/ps-core",
    "crates/ps-electro",
    "crates/ps-fluid",
    "crates/ps-fuse",
    "crates/ps-intuition",
    "crates/ps-learning",
    "crates/ps-memory",
    "crates/ps-optical",
    "crates/ps-prediction",
    "crates/ps-radiative",
    "crates/ps-tactile",
    "crates/ps-thermal",
    "crates/ps-utils",
    "crates/ps-vision",
]


[workspace.package]
version = "0.1.0"
authors = ["Lalo Blanc <lalo@engilore.com>"]
edition = "2021"
homepage = "https://www.engilore.com/"
license = "Apache-2.0"
repository = "https://github.com/engilore/pulsar-stellar"


[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
ndarray = "0.15.4"