[build-system]
requires = ["maturin>=0.13"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "pulsar-stellar"

[project]
name = "pulsar-stellar"
version = "0.1.0"
description = "A modular library powered by Rust and Python, tailored for sensory data integration, advanced comprehension, and data-driven optimization."
readme = "README.md"
authors = ["Lalo Blanc <lalo@engilore.com>"]
license = "Apache-2.0"
keywords = ["rust", "python-bindings", "sensory-data", "data-comprehension", "data-optimization", "insights"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Data Processing",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/engilore/pulsar-stellar"
repository = "https://github.com/engilore/pulsar-stellar"
dependencies = []
requires-python = ">=3.10"
